  REPORT_PATH configuration value moved from EntityApplicationModel to ReportWrapper
  Entity.getBackgroundColor() renamed to getColor()
  Conditions refactoring
  DefaultLocalEntityConnection refactored
  Further refactoring of DefaultLocalEntityConnection
  Domain.getDefinedEntities() now returns Collection<Entity.Definition>, rename to getEntityDefinitions()
  Conditions refactoring continued, shuffling complexity around it seems
  WhereCondition.getPropertyIds() removed, usage replace with getColumnProperties()
  DefaultLocalEntityConnection.writeBlob() now throws exception if multiple rows were affected, refactoring
  Condition.expand() removed, functionality moved to WhereCondition
  PropertyCondition.setCaseSensitive() added
  Serializer removed
  DefaultLocalEntityConnection constructor simplified, LocalEntityConnection setters made fluent
  Entities.getOriginalKeys() added, old getKeys() with originalValue boolean parameter now private
  Entities.getValues() and getDistinctValues() streamlined, getDistinctValuesIncludingNull() added
  EntityConnection.selectMany() renamed to select()
  Entity.ConditionProvider.getConditionString(), propertyIds parameter added
  WhereCondition moved from db-local to db.condition in db-core, now an interface, Conditions.whereCondition() added
  Domain.key() overloaded with integer and long value parameter
  SwingEntityModelProvider, EntityPanelProvider, some refactoring, and more refactoring
  EntityTestUnit.initializeReferenceEntity() can now return null without crashing the test
  Using built-in javadoc and sources jar Gradle functionality
  Domain.keys() added, overloaded for Integer and Long
  Domain.StringProvider moved up
  Domain.Validator moved up to DefaultValidator
  DefaultValueMap.DefaultValidator moved up and renamed DefaultValueMapValidator
  domain.DefaultValidator renamed to DefaultEntityValidator
  ServerException moved to common.remote.exception, inner classes moved up