@@ -3,10 +3,6 @@
  */
 package org.jminor.framework.db.condition;
 
-import java.io.IOException;
-import java.io.ObjectInputStream;
-import java.io.ObjectOutputStream;
-
 import static java.util.Objects.requireNonNull;
 
 class DefaultEntityCondition implements EntityCondition {
@@ -15,8 +11,8 @@ class DefaultEntityCondition implements EntityCondition {
 
   private static final Condition.EmptyCondition EMPTY_CONDITION = new Condition.EmptyCondition();
 
-  private String entityId;
-  private Condition condition;
+  private final String entityId;
+  private final Condition condition;
 
   /**
    * Instantiates a new empty {@link DefaultEntityCondition}.
@@ -47,15 +43,5 @@ class DefaultEntityCondition implements EntityCondition {
   @Override
   public final Condition getCondition() {
     return condition;
-  }
-
-  private void writeObject(final ObjectOutputStream stream) throws IOException {
-    stream.writeObject(entityId);
-    stream.writeObject(condition);
-  }
-
-  private void readObject(final ObjectInputStream stream) throws ClassNotFoundException, IOException {
-    entityId = (String) stream.readObject();
-    condition = (Condition) stream.readObject();
   }
 }
