@@ -5307,3 +5307,4 @@
   DefaultValueMap.DefaultValidator moved up and renamed DefaultValueMapValidator
   domain.DefaultValidator renamed to DefaultEntityValidator
   ServerException moved to common.remote.exception, inner classes moved up
+  Removed unnecessary writeObject() and readObject() implementations
